Adding compatibolity with java 9 & 10