@@ -16,6 +16,10 @@ fi
 if [[ "$JAVA_BIN" ]]; then
     JAVA_VERSION=$("$JAVA_BIN" -version 2>&1 | awk -F '"' '/version/ {print $2}')
     echo "JAVA Version : $JAVA_VERSION"
+    MAYOR_DIGIT=$( echo $JAVA_VERSION | sed -n 's/\([0-9]*\)\..*/\1/p' )
+    if [ $MAYOR_DIGIT -gt "1" ]; then
+      JDK_OPTS="--add-modules java.xml.bind"
+    fi
 fi
 
 export BIN_PATH="$(cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )"
@@ -23,5 +27,4 @@ echo "BIN path $BIN_PATH"
 export ROOT_PATH=$(dirname $BIN_PATH)
 echo "Starting Caudal from $ROOT_PATH"
 
-#$JAVA_BIN -Djava.ext.dirs=lib mx.interware.caudal.core.StarterDSL "$@"
-$JAVA_BIN -cp "./lib/*:./target/*" mx.interware.caudal.core.StarterDSL "$@"
+$JAVA_BIN $JDK_OPTS -cp "./lib/*:./target/*" mx.interware.caudal.core.StarterDSL "$@"
